<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ButtonFragment">


    <TextView
            android:id="@+id/fragment_button_counter_text_view"
            style="@style/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Number of Button Clicks: 0" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <Button
                android:id="@+id/fragment_button_counter_button"
                style="@style/button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Count"/>

        <Button
                android:id="@+id/fragment_button_fragment_change_button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Fragment"/>

    </LinearLayout>
</LinearLayout>