<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListFragment">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


<TextView
        android:id="@+id/list_fragment_title_text_view"
        style="@style/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0/0 items selected" />

<android.support.v7.widget.RecyclerView
        android:id="@+id/list_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>

<android.support.design.widget.FloatingActionButton
        android:id="@+id/list_fragment_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add"
        android:layout_margin="16dp" />
</FrameLayout>